--- a/画图函数.md
+++ b/画图函数.md
@@ -1,1 +1,10 @@
 * `hist()`函数：画直方图
+* `curve()`函数语法格式如下：
+curve(expr, from = 0, to = 10, col=2, lty=2, lwd=2, add=TRUE)
+主要的参数如下：
+expr：函数名称或一个关于变量x的函数表达式
+from，to：表示绘图的起止范围
+add：是一个逻辑值，当为TRUE时，表示将绘图添加到已存在的绘图中
+lty: 指定线条类型
+lwd: 指定线条宽度
+
